--- a/localStorage/index.html
+++ b/localStorage/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios de localStorage</title>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="Ej1">
+       <label for="color">Elige un color de fondo:</label>
+        <input type="color" id="color"> 
+    </div>
+    <div class="Ej2">
+        <input type="text" id="tarea" placeholder="Escribe una tarea">
+        <button id="btnAgregar">Agregar</button>
+        <ul id="lista"></ul>
+    </div>
+    <div class="Ej3">
+        <h2>Has visitado esta página <span id="contador">0</span> veces</h2>
+    </div>
+    <div class="Ej4">
+        <input type="text" id="dato" placeholder="Escribe un dato">
+        <button id="btnGuardar">Guardar</button>
+        <button id="btnEliminar">Eliminar</button>
+    </div>
+    <div class="Ej5">
+        <button id="btnEliminarTodo">Borrar Todo</button>
+    </div>
     
 </body>
 </html>
